--- a/AppBlog/templates/AppBlog/buscar.html
+++ b/AppBlog/templates/AppBlog/buscar.html
@@ -15,7 +15,7 @@
         <div class='container px-4 px-lg-5'>
             <div class='row gx-4 gx-lg-5 justify-content-center'>
                 <div class='col-md-10 col-lg-8 col-xl-7'>
-                    <form action='/AppBlog/buscar' method='GET'>
+                    <form action='/buscar' method='GET'>
                         <div class='form-floating'>
                             <input class='form-control' type='text' name='titulo' placeholder='Ingrese un título...'>
                             <label for='titulo'>Título</label>
